Fix podcast episode titles overlapping alphabet navigation on narrow screen
It's actually a bit of mystery, why changing the "display" property of the
container element helped here. It didn't remove the problem quite completely
but it reduced it a lot.

Also, it's a bit weird that this problem was clearly visible in the Podcasts
view but not in the Albums view while both use basically the same CSS. The
current assumption is that the reason is podcasts routinely having longer
episode number and also longer titles.

--- a/css/app/music-albums.css
+++ b/css/app/music-albums.css
@@ -17,7 +17,7 @@
 .artist-area {
 	clear: both;
 	padding-top: 15px;
-	display: table;
+	display: inline-block;
 	width: 100%;
 }
 
